chore(errorResponse): clean up the error message and swag doc
